Fix JDK 9 deprecated warnings for newInstance()
Class.newInstance() is deprecated in JDK 9 (JDK-6850612). Can easily be replaced with Class.getConstructor().newInstance().